tests/fixtures/invalid/float_bitxor_bool.py
# Cannot bitwise XOR Float and Bool
x: float = 1.0 ^ True
